# MinerU_APIServer_Rust

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-entrypoint.sh
src/: error.rs  main.rs  memory.rs  parser.rs
src/config/: mod.rs
src/domain/: models.rs  tasks.rs
src/io/: document_writer.rs  mod.rs  result_builder.rs  uploads.rs
src/office/: docx.rs  image_serializer.rs  inline.rs  markdown.rs  mod.rs  model.rs  package.rs  pptx.rs  rels.rs  writer_adapter.rs  xlsx.rs
src/server/: health_page.html  health_page.rs  mod.rs  openapi.rs  routes.rs  security.rs  state.rs
src/vlm/: client.rs  mod.rs  parser.rs  python_compat.rs  scheduler.rs
