[package]
name = "mineru"
version = "0.1.0"
edition = "2021"

[features]
default = ["jemalloc"]
jemalloc = ["dep:tikv-jemallocator", "dep:tikv-jemalloc-ctl"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
async-openai = { version = "0.40.1", features = ["byot", "chat-completion", "model"] }
axum = { version = "0.8", features = ["multipart", "macros"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crc32fast = "1.4"
dotenvy = "0.15"
futures = "0.3"
fast_image_resize = { version = "6.0.0", features = ["image", "rayon"] }
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "jpeg", "png", "tiff", "webp"] }
md-5 = "0.10"
mime_guess = "2.0"
pdfium-render = "0.8"
pdfium-auto = { version = "0.3.0", features = ["bundled"] }
printpdf = { version = "0.9.1", default-features = false, features = ["png"] }
rayon = "1.12"
regex = "1.11"
reqwest = { version = "0.13", default-features = false, features = ["json", "multipart", "rustls"] }
secrecy = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tikv-jemallocator = { version = "0.7", optional = true }
tikv-jemalloc-ctl = { version = "0.7", features = ["stats"], optional = true }
tokio = { version = "1.45", features = ["full"] }
tower-http = { version = "0.6", features = ["compression-gzip", "cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5.3", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
uuid = { version = "1.16", features = ["v4", "serde"] }
zip = { version = "2.4", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.16"
tower = { version = "0.5", features = ["util"] }
